--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
   "license": "MIT",
   "dependencies": {
     "express": "4.16.4"
+  },
+  "devDependencies": {
+    "eslint": "5.9.0",
+    "eslint-plugin-react": "7.11.1",
+    "nodemon": "1.18.6"
   }
 }
