--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
   "name": "expense-manager",
   "version": "0.0.0",
-  "description": "",
+  "description": "Expense Manager",
   "main": "index.js",
   "scripts": {
-    "start": "node ."
+    "start": "nodemon . --watch src/server",
+    "serve": "node ."
   },
   "author": "Gopikrishna Sathyamurthy",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "1.18.3",
     "express": "4.16.4"
   },
   "devDependencies": {
     "eslint": "5.9.0",
     "eslint-plugin-react": "7.11.1",
     "nodemon": "1.18.6"
-  }
+  },
+  "repository": "Gopikrishna19/expense-manager"
 }
