--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,14 @@
     "semi": [
       "error",
       "always"
+    ],
+    "sort-keys": [
+      "error",
+      "asc",
+      {
+        "caseSensitive": true,
+        "natural": true
+      }
     ]
   }
 }
