--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Expense Manager",
   "main": "index.js",
   "scripts": {
+    "build": "rimraf src/client/dist && webpack --mode production",
     "lint": "eslint . --ignore-path .gitignore",
     "start": "nodemon . --watch src/server --watch src/schema",
-    "serve": "node ."
+    "serve": "npm run build && node ."
   },
   "author": "Gopikrishna Sathyamurthy",
   "license": "MIT",
@@ -16,12 +17,33 @@
     "express-graphql": "0.7.1",
     "graphql": "14.0.2",
     "moment": "2.22.2",
-    "mongoose": "5.3.13"
+    "mongoose": "5.3.13",
+    "prop-types": "15.6.2",
+    "react": "16.6.3",
+    "react-dom": "16.6.3",
+    "react-loadable": "5.5.0"
   },
   "devDependencies": {
+    "@babel/core": "7.1.6",
+    "@babel/plugin-proposal-class-properties": "7.1.0",
+    "@babel/plugin-syntax-dynamic-import": "7.0.0",
+    "@babel/preset-env": "7.1.6",
+    "@babel/preset-react": "7.0.0",
+    "babel-eslint": "10.0.1",
+    "babel-loader": "8.0.4",
+    "css-loader": "1.0.1",
     "eslint": "5.9.0",
     "eslint-plugin-react": "7.11.1",
-    "nodemon": "1.18.6"
+    "html-webpack-plugin": "3.2.0",
+    "mini-css-extract-plugin": "0.4.5",
+    "nodemon": "1.18.6",
+    "react-hot-loader": "4.3.12",
+    "rimraf": "2.6.2",
+    "style-loader": "0.23.1",
+    "webpack": "4.26.0",
+    "webpack-cli": "3.1.2",
+    "webpack-dev-middleware": "3.4.0",
+    "webpack-hot-middleware": "2.24.3"
   },
   "repository": "Gopikrishna19/expense-manager"
 }
