--- a/package.json
+++ b/package.json
@@ -6,22 +6,26 @@
   "scripts": {
     "build": "rimraf src/client/dist && webpack --mode production",
     "lint": "eslint . --ignore-path .gitignore",
-    "start": "nodemon . --watch src/server --watch src/schema",
-    "serve": "npm run build && node ."
+    "start": "nodemon . --watch src/server --watch src/schema --watch webpack.config.js",
+    "serve": "npm run build && node . --mode production"
   },
   "author": "Gopikrishna Sathyamurthy",
   "license": "MIT",
   "dependencies": {
     "body-parser": "1.18.3",
+    "chalk": "2.4.1",
     "express": "4.16.4",
     "express-graphql": "0.7.1",
     "graphql": "14.0.2",
+    "minimist": "1.2.0",
     "moment": "2.22.2",
     "mongoose": "5.3.13",
     "prop-types": "15.6.2",
     "react": "16.6.3",
+    "react-document-title": "2.0.3",
     "react-dom": "16.6.3",
-    "react-loadable": "5.5.0"
+    "react-loadable": "5.5.0",
+    "react-router-dom": "4.3.1"
   },
   "devDependencies": {
     "@babel/core": "7.1.6",
