--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Gopikrishna Sathyamurthy",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "3.7.1",
     "body-parser": "1.18.3",
     "chalk": "2.4.1",
     "express": "4.16.4",
