--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-document-title": "2.0.3",
     "react-dom": "16.6.3",
     "react-loadable": "5.5.0",
-    "react-router-dom": "4.3.1"
+    "react-router-dom": "4.3.1",
+    "tcomb-validation": "3.4.1"
   },
   "devDependencies": {
     "@babel/core": "7.1.6",
