--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "16.6.3",
     "react-document-title": "2.0.3",
     "react-dom": "16.6.3",
+    "react-google-charts": "3.0.10",
     "react-loadable": "5.5.0",
     "react-router-dom": "4.3.1",
     "tcomb-validation": "3.4.1"
